--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>jeremy plasencia santillan jeremy</h1>
-
+    <h1>cristian seabstian vasquez miller</h1>
 
     <h1>Suma de Dos Números</h1>
     <input type="number" id="num1" placeholder="Número 1">
@@ -19,7 +19,6 @@
 
 
     <script src="script.js"></script>
-
 
 </body>
 </html>
